# Chess

./: .gitignore  .gitmodules  CMakeLists.txt  Documentation.md  LICENSE.md  README.md  docker-compose.yml  installation.py  package-lock.json  package.json
client/: CMakeLists.txt  client.cpp  package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  App.jsx  App.tsx  index.js
client/src/app/: App.jsx
client/src/components/: AlternateBoard.css  AlternateBoard.jsx  Board.css  Board.jsx  Button.css  Button.jsx  Button.tsx  Canvas.css  Canvas.jsx  ChrisBoard.jsx  PlayerForm.css  PlayerForm.jsx  Tile.jsx  UnifiedBoard.jsx
client/src/components/Pieces/: Bishop.jsx  BlackBishop.jsx  BlackKing.jsx  BlackKnight.jsx  BlackPawn.jsx  BlackQueen.jsx  BlackRook.jsx  King.jsx  Knight.jsx  Pawn.jsx  Queen.jsx  Rook.jsx  TestPiece.jsx  WhiteBishop.jsx  WhiteKing.jsx  WhiteKnight.jsx  WhitePawn.jsx  WhiteQueen.jsx  WhiteRook.jsx  fetchPieces.jsx  getPiece.jsx
client/src/components/Pieces/psd/black/: BlackBishop.psd  BlackKing.psd  BlackKnight.psd  BlackPawn.psd  BlackQueen.psd  BlackRook.psd
client/src/components/Pieces/psd/white/: WhiteBishop.psd  WhiteKnight.psd  WhitePawn.psd  WhiteQueen.psd  WhiteRook.psd
client/src/consts/: Pieces.jsx  TileColor.jsx
client/src/hooks/: usePiecesRegistry.js
client/src/pages/: Game.css  Game.jsx  MainPage.jsx
client/src/screens/: Error.jsx  Game.css  Game.jsx  MainPage.css  MainPage.jsx  MainPage.tsx  Training.jsx
client/src/services/: Game.service.jsx  GameManager.server.jsx  GameManager.service.jsx  PiecesRegistry.js  http.server.jsx  http.service.jsx  http.template.jsx
client/src/threejs/: somthing.stl  three-scene.js
client/src/tools/: Draggable.jsx  Droppable.jsx  MousePosition.jsx
database/: chess.sql  data.sql  insert.sql  query.sql  trigger.sql  triggers.sql
db/: Dockerfile  init.sql  triggers.sql
db/src/: chess.sql
lib/: CMakeLists.txt
lib/Board/: Board.cpp  Board.h
lib/GameManager/: Color.h  GameManager.cpp  GameManager.h  InputHandler.h  State.h
lib/InputHandler/: InputHandler.cpp  InputHandler.h
lib/Pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
lib/Player/: Player.cpp  Player.h
lib/Position/: Position.h
lib/Random/: Random.cpp  Random.h
lib/Tile/: Tile.cpp  Tile.h
server/: CMakeLists.txt  environment.yml  httplib.h  index.spec.ts  jasmine-typescript-helper.js  jasmine.json  nodemon.json  package-lock.json  package.json  server.cpp  tsconfig.app.json  tsconfig.json  tsconfig.test.json
server/ChessLib/: CMakeLists.txt
server/ChessLib/lib/: ChessLib.vcxproj  RUN_TESTS.vcxproj  cmake_install.cmake
server/ChessLib/lib/ChessLib.dir/Debug/: ChessLib.lib.recipe
server/ChessLib/lib/ChessLib.dir/Debug/ChessLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  Lib-link.read.1.tlog
server/ChessLib/lib/Debug/: ChessLib.lib
server/ChessLib/lib/InputHandler/: InputHandler.h
server/ChessLib/lib/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Rook.cpp
server/ChessLib/lib/Player/: Player.h
server/ChessLib/src/: INSTALL.vcxproj
server/ChessLib/src/Chess.dir/Debug/: Chess.exe.recipe  Chess.ilk
server/ChessLib/src/Chess.dir/Debug/Chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.read.1.tlog  link.write.1.tlog
server/ChessLib/tests/: CMakeLists.txt  INSTALL.vcxproj  RUN_TESTS.vcxproj  TestExecutable.vcxproj  test.cpp
server/ChessServer/: app.py
server/app/: app.ts
server/app/classes/Tools/: Cookie.ts  httpState.ts
server/app/controller/: cookie.controller.ts  game.controller.ts  player.controller.ts
server/app/services/: game.service.ts  postgreSQL.service.ts
server/app/tests/: resetQuery.ts  template.test.ts
server/cppLib/: CMakeLists.txt
server/cppLib/lib/: CMakeLists.txt  INSTALL.vcxproj
server/cppLib/lib/Board/: Board.h
server/cppLib/lib/ChessLib.dir/Debug/ChessLib.tlog/: CL.write.1.tlog  ChessLib.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
server/cppLib/lib/Example/: example.cpp
server/cppLib/lib/GameManager/: GameManager.cpp  GameManager.h  State.h
server/cppLib/lib/InputHandler/: InputHandler.cpp  InputHandler.h  InputManager.cpp  InputManager.h
server/cppLib/lib/PR_Debug/: PR_Debug.cpp  PR_Debug.h
server/cppLib/lib/Pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
server/cppLib/lib/Player/: Player.cpp  Player.h
server/cppLib/lib/Random/: Random.cpp
server/cppLib/lib/Tile/: Tile.h
server/cppLib/src/: Chess.vcxproj  RUN_TESTS.vcxproj  cmake_install.cmake  main.cpp
server/cppLib/src/Chess.dir/Debug/Chess.tlog/: CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog
server/cppLib/tests/: cmake_install.cmake  test.cpp
server/data/: pieces.json  playersPlaying.json
server/flask/: app.py  requirements.txt
server/flask/lib/: Queen.fbx
server/spec/: index.spec.ts
server/src/: Piece.ts  app.spec.ts  app.ts  index.ts
server/src/Board/: Board.ts
server/src/GameManager/: Color.ts  GameManager.ts  Position.ts  State.ts
server/src/Pieces/: Bishop.ts  King.ts  Knight.ts  Pawn.ts  Piece.ts  Queen.ts  Rook.ts
server/src/classes/Board/: Board.ts
server/src/classes/GameManager/: GameManager.ts  Position.ts  State.ts
server/src/controller/: cookie.controller.ts
server/src/data/: playersWaiting.json
server/src/services/: cookie.service.ts  game.service.ts  postgreSQL.service.ts  postgres.service.js  postgres.service.ts
server/tests/: template.test.ts
src/: CMakeLists.txt  main.cpp
tests/: test.cpp
